testsuite/tests/safeHaskell/check/pkg01/ImpSafeOnly03.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE Safe #-}
module Main where

import M_SafePkg3

main = do
    putStrLn $ show bigInt

